--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ solution: adhan-csharp.sln
 script:
   - dotnet restore
   - dotnet test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
