Add full PDB output support

--- a/src/Adhan.Test/Adhan.Test.csproj
+++ b/src/Adhan.Test/Adhan.Test.csproj
@@ -6,6 +6,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="TimeZoneConverter\Aliases.csv.gz" />
     <None Remove="TimeZoneConverter\Mapping.csv.gz" />
